# DeepVerifyPro

./: .gitignore  CLAUDE.md  CODING_STANDARDS.md  DEVIATIONS.md  M8_PROPOSAL_detection_model.md  MODELS_FROM_GITHUB.md  README.md  pyproject.toml
deepverify_pro/: __init__.py
deepverify_pro/adapters/: __init__.py  base.py  zoom.py
deepverify_pro/agents/: __init__.py  orchestrator.py
deepverify_pro/api/: __init__.py  __main__.py  app.py  media.py  schemas.py
deepverify_pro/audit/: __init__.py  log.py
deepverify_pro/authorization/: __init__.py  channels.py  trigger.py
deepverify_pro/cli/: __init__.py
deepverify_pro/config/: __init__.py  settings.py
deepverify_pro/detection/: __init__.py  base.py
deepverify_pro/detection/audio/: MODEL_CARD.md  __init__.py  baseline.py  mfcc.py
deepverify_pro/detection/video/: MODEL_CARD.md  MODEL_CARD_efficientnet_sbi.md  __init__.py  baseline.py  efficientnet_sbi.py  landmarks.py
deepverify_pro/indicator/: __init__.py  state.py
deepverify_pro/provenance/: __init__.py  signer.py  verifier.py
deepverify_pro/tools/: __init__.py  audio_detect.py  audit_log.py  financial_trigger.py  provenance_financial_trigger.py  provenance_verify.py  sign_media.py  video_detect.py
scripts/: evaluate.py  fetch_landmarks.py  fetch_sbi_weights.py  gen_test_cert.py
tests/: conftest.py  test_api.py  test_audio_detect.py  test_audit_log.py  test_efficientnet_sbi.py  test_evaluate.py  test_financial_trigger.py  test_indicator.py  test_orchestrator.py  test_provenance.py  test_provenance_financial_trigger.py  test_smoke.py  test_video_detect.py
